--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,7 @@
-streamlit>=1.28.0
-supabase>=2.3.0
-openai>=1.0.0
-python-dotenv>=1.0.0
-pandas>=2.0.0
-plotly>=5.17.0
-requests>=2.31.0
-python-multipart>=0.0.6
-tenacity>=8.2.0  # لإعادة المحاولة التلقائية
-backoff>=2.2.0   # لإدارة أخطاء الاتصال
+streamlit==1.28.0
+supabase==2.3.0
+openai==1.3.0
+python-dotenv==1.0.0
+pandas==2.0.3
+plotly==5.17.0
+requests==2.31.0
