--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,6 @@
-streamlit>=1.28.0
-supabase>=2.3.0
-openai>=1.0.0
-python-dotenv>=1.0.0
-pandas>=2.0.0
-plotly>=5.17.0
-requests>=2.31.0
-httpx>=0.24.0
+streamlit==1.29.0
+supabase==1.0.3
+openai==1.3.5
+pandas==2.1.4
+plotly==5.18.0
+python-dotenv==1.0.0
